@@ -8,6 +8,7 @@
  * Renamed protocol convertor(sic) to protocol converter in the RDM code (C++
  * Renamed valiator(sic) to validator, incomming(sic) to incoming, mimimun(sic)
    to minimum and overiding(sic) to overriding, all of which may or may not
+ * Renamed RESONSE_INVALID_DESTINATION(sic) to RESPONSE_INVALID_DESTINATION in
         /^(?:([0-9]{1,3})(?:\s(THRU)\s(?:([0-9]{1,3}))?)?(?:\s(@)\s(?:([0-9]{1,3}|FULL))?)?)/;
  *   channel_range ::= "ALL" | "*" | channel "THRU" channel | channel > channel
       /(?:([0-9]{1,3})(?:\s+THRU\s+([0-9]{0,3}))?)\s+@\s+([0-9]{0,3})$/);
