@@ -391,7 +391,7 @@ void ArtNetNodeTest::testBasicBehaviour() {
   // enable an input port and check that we send a poll
   ExpectedBroadcast(POLL_MESSAGE, sizeof(POLL_MESSAGE));
 
-  // we should see an unsolicted poll reply sent because conditions have
+  // we should see an unsolicited poll reply sent because conditions have
   // changed.
   uint8_t expected_poll_reply_packet[sizeof(POLL_REPLY_MESSAGE)];
   memcpy(expected_poll_reply_packet, POLL_REPLY_MESSAGE,
